2019-1/231/users/4225/executions/1581_1015.log
== TEST (2019-03-21 18:10:32) 
-- CODE:
a = int(input("a?"))
b = int(input("b?"))
c = int(input("c?"))


-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:15:17) 
-- CODE:
a = int(input("a?"))
b = int(input("b?"))
c = int(input("c?"))
meio = a+b+c
menor = min(a,b,c)
maior = max(a,b,c)
print(min(a,b,c))
print(meio-maior-menor)
print(max(a,b,c)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:15:54) 
-- CODE:
a = int(input("a?"))
b = int(input("b?"))
c = int(input("c?"))

print(min(a,b,c))
print(max(a,b,c))
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:01) 
-- CODE:
a = int(input("a?"))
b = int(input("b?"))
c = int(input("c?"))
meio = (a+b+c)- min(a,b,c) - max(a,b,c)

print(min(a,b,c))
print(meio)
print(max(a,b,c))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:28) 
-- CODE:
a = int(input("a?"))
b = int(input("b?"))
c = int(input("c?"))
meio = (a+b+c)- min(a,b,c) - max(a,b,c)

print(min(a,b,c))
print(meio)
print(max(a,b,c))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:26:44) 
-- CODE:
a = int(input("a?"))
b = int(input("b?"))
c = int(input("c?"))
meio = (a+b+c)- min(a,b,c) - max(a,b,c)

print(min(a,b,c))
print(meio)
print(max(a,b,c))
-- EXECUTION TIME:
0.202376
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
